// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom 1`] = `
Array [
  Object {
    "apiVersion": "apps/v1",
    "kind": "DaemonSet",
    "metadata": Object {
      "name": "test-daemonset-c8482ea2",
    },
    "spec": Object {
      "minReadySeconds": 5,
      "selector": Object {
        "matchLabels": Object {
          "cdk8s.io/metadata.addr": "test-DaemonSet-c8f77186",
        },
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "cdk8s.io/metadata.addr": "test-DaemonSet-c8f77186",
          },
        },
        "spec": Object {
          "automountServiceAccountToken": true,
          "containers": Array [
            Object {
              "image": "image",
              "imagePullPolicy": "Always",
              "name": "main",
              "securityContext": Object {
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsGroup": 26000,
                "runAsNonRoot": false,
                "runAsUser": 25000,
              },
            },
          ],
          "dnsPolicy": "ClusterFirst",
          "securityContext": Object {
            "fsGroupChangePolicy": "Always",
            "runAsNonRoot": false,
          },
          "setHostnameAsFQDN": false,
        },
      },
    },
  },
]
`;

exports[`defaults 1`] = `
Array [
  Object {
    "apiVersion": "apps/v1",
    "kind": "DaemonSet",
    "metadata": Object {
      "name": "test-daemonset-c8482ea2",
    },
    "spec": Object {
      "minReadySeconds": 0,
      "selector": Object {
        "matchLabels": Object {
          "cdk8s.io/metadata.addr": "test-DaemonSet-c8f77186",
        },
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "cdk8s.io/metadata.addr": "test-DaemonSet-c8f77186",
          },
        },
        "spec": Object {
          "automountServiceAccountToken": true,
          "containers": Array [
            Object {
              "image": "image",
              "imagePullPolicy": "Always",
              "name": "main",
              "securityContext": Object {
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsGroup": 26000,
                "runAsNonRoot": false,
                "runAsUser": 25000,
              },
            },
          ],
          "dnsPolicy": "ClusterFirst",
          "securityContext": Object {
            "fsGroupChangePolicy": "Always",
            "runAsNonRoot": false,
          },
          "setHostnameAsFQDN": false,
        },
      },
    },
  },
]
`;
